--- a/index.html
+++ b/index.html
@@ -1,87 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/css/main.css">
-    <title>Аэропорт</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="css/main.css">
+	<title>Аэропорт</title>
 </head>
+
 <body>
 
-    <div class="overlay">
-        <div class="overlay__el-01"></div>
-    </div>
-    <div class="menu">
-        <div class="menu__container _container">
-            <div class="menu__body">
-                <div class="menu__close"></div>
-                <ul class="menu__navigation">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Feedback</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Advantage</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    
-    <header class="header">
-        <div class="header__container _container">
-            <div class="header__body">
-                <div class="header__block">
-                    <div class="header__logo-wrapper">
-                        <div class="header__logo">Growth</div>
-                    </div>
-                </div>
-                <div class="header__block">
-                    <div class="header__item-wrapper">
-                        <div class="header__item">
-                            <div class="header__search">
-                                <ion-icon name="search-outline"></ion-icon>
-                            </div>
-                            <input type="text" class="header__search-input" placeholder="Поиск">
-                        </div>
-                    </div>
-                    <div class="header__item-wrapper">
-                        <div class="header__item">
-                            <div class="header__menu">
-                                <ion-icon name="menu-outline"></ion-icon>
-                            </div>
-                            <div class="header__menu-text">Меню</div>
-                        </div>
-                    </div>
-                    <div class="header__item-wrapper">
-                        <div class="header__item">
-                            <div class="header__avatar-text">Александр К.</div>
-                            <div class="header__avatar"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
+	<div class="overlay">
+		<div class="overlay__el-01"></div>
+	</div>
+	<div class="menu">
+		<div class="menu__container _container">
+			<div class="menu__body">
+				<div class="menu__close"></div>
+				<ul class="menu__navigation">
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Feedback</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Advantage</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 
-    <section class="main">
-        <div class="main__container _container">
-            <div class="main__body">
-                <div class="main__block">
-                    <div class="main__heading">
-                        <span>Собирайте</span>
-                        <span>впечатления</span>
-                        <span>сейчас</span>
-                    </div>
-                    <div class="main__descriptions">Так до 6 километров
-                        с каждых 60 руб.</div>
-                </div>
-            </div>
-        </div>
-    </section>
+	<header class="header">
+		<div class="header__container _container">
+			<div class="header__body">
+				<div class="header__block">
+					<div class="header__logo-wrapper">
+						<div class="header__logo">Growth</div>
+					</div>
+				</div>
+				<div class="header__block">
+					<div class="header__item-wrapper">
+						<div class="header__item">
+							<div class="header__search">
+								<i class="_icon-search"></i>
+							</div>
+							<input type="text" class="header__search-input" placeholder="Поиск">
+						</div>
+					</div>
+					<div class="header__item-wrapper">
+						<div class="header__item">
+							<div class="header__menu">
+								<i class="_icon-menu"></i>
+							</div>
+							<div class="header__menu-text">Меню</div>
+						</div>
+					</div>
+					<div class="header__item-wrapper">
+						<div class="header__item">
+							<div class="header__avatar-text">Александр К.</div>
+							<div class="header__avatar"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js" integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="/js/main.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+	<section class="main">
+		<div class="main__container _container">
+			<div class="main__body">
+				<div class="main__block">
+					<div class="main__heading">
+						<span>Собирайте</span>
+						<span>впечатления</span>
+						<span>сейчас
+							<div class="main__descriptions">Так до 6 км
+								с каждых 60 руб.</div>
+						</span>
+					</div>
+				</div>
+				<div class="main__bron-wrapper">
+					<div class="main__bron-item-wrapper">
+						<div class="main__bron-item">
+							<div class="main__bron-location _icon-location"></div>
+							<input class="main__bron-location-input" placeholder="Куда"></input>
+						</div>
+						<div class="main__bron-item">
+							<div class="main__bron-date-item">
+								<div class="main__bron-date-icon _icon-date-01 "></div>
+								<input class="main__bron-date-input" type="date"></input>
+							</div>
+							<div class="main__bron-date-swipe"></div>
+							<div class="main__bron-date-item">
+								<div class="main__bron-date-icon _icon-date-02"></div>
+								<input class="main__bron-date-input" type="date" placeholder="16 Февраль 2022"></input>
+							</div>
+						</div>
+						<div class="main__bron-item">
+							<div class="main__bron-passenger _icon-chel"></div>
+							<select>
+								<option selected>1 пассажир</option>
+								<option>2 пассажир</option>
+								<option>3 пассажир</option>
+								<option>4 пассажир</option>
+								<option>5 пассажир</option>
+								<option>6 пассажир</option>
+								<option>7 пассажир</option>
+								<option>8 пассажир</option>
+							</select>
+						</div>
+						<div class="main__bron-btn">Найти</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="idea">
+		<div class="idea__container _container">
+			<div class="idea__body">
+				<div class="idea__block">
+					<div class="idea__heading">Идеи для
+						путешествия</div>
+				</div>
+				<div class="idea__content swiper">
+					<div class="idea__item-wrapper swiper-wrapper">
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Если вы не боитесь воды</div>
+							<div class="idea__item-heading">Пляж</div>
+						</div>
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Культуры других народов</div>
+							<div class="idea__item-heading">Другой город</div>
+						</div>
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Если хотите впечатлений</div>
+							<div class="idea__item-heading">Природа
+								(активный отдых)</div>
+						</div>
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Простой отдых</div>
+							<div class="idea__item-heading">Природа
+								(расслабляющий отдых)</div>
+						</div>
+
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Если вы не боитесь воды</div>
+							<div class="idea__item-heading">Пляж</div>
+						</div>
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Культуры других народов</div>
+							<div class="idea__item-heading">Другой город</div>
+						</div>
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Если хотите впечатлений</div>
+							<div class="idea__item-heading">Природа
+								(активный отдых)</div>
+						</div>
+						<div class="idea__item swiper-slide">
+							<div class="idea__item-image"></div>
+							<div class="idea__item-text">Простой отдых</div>
+							<div class="idea__item-heading">Природа
+								(расслабляющий отдых)</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="feedback">
+		<div class="feedback__container _container">
+			<div class="feedback__body">
+				<div class="feedback__block">
+					<div class="feedback__heading">присоединяйтесь
+						к нашей рассылке</div>
+					<div class="feedback__content">
+						<input class="feedback__input" placeholder="Ваша почта"></input>
+						<div class="feedback__btn">Подписаться</div>
+					</div>
+				</div>
+				<div class="feedback__block">
+					<div class="feedback__image"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="footer__container _container">
+			<div class="footer__body">
+				<div class="footer__content">
+					<div class="footer__info">О нас</div>
+					<div class="footer__block">
+						<div class="footer__navigation">
+							<li><a href="#">Поиск билетов</a></li>
+							<li><a href="#">Помощь сотрудников</a></li>
+							<li><a href="#">Помощь партнерам</a></li>
+							<li><a href="#">Эко-ответственность</a></li>
+						</div>
+						<div class="footer__navigation">
+							<li><a href="#">Пресс-центр</a></li>
+							<li><a href="#">Для инвесторов</a></li>
+							<li><a href="#">Решение споров</a></li>
+							<li><a href="#">Контакты корпорации</a></li>
+						</div>
+					</div>
+				</div>
+				<div class="footer__content">
+					<div class="footer__info">Контактные данные</div>
+					<div class="footer__block">
+						<div class="footer__text">Почта: growth@gmail.com</div>
+						<div class="footer__text">Телефон: +99 999 999 99</div>
+					</div>
+				</div>
+				<div class="footer__content">
+					<div class="footer__info">Социальные сети</div>
+					<div class="footer__block">
+						<div class="footer__social"></div>
+						<div class="footer__social"></div>
+						<div class="footer__social"></div>
+					</div>
+				</div>
+
+				<div class="footer__copyright">Copyright © 2022 Growth.com™. Все права защищены</div>
+			</div>
+		</div>
+	</footer>
+
+
+	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+		integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="/js/main.js"></script>
+
 </body>
+
 </html>
